[package]
name = "vpn-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnet = "2.7.2"
packet = "0.1.4"
tokio = { version = "1.25.0", features = [ "full" ] }
tokio-test = "0.4.2"
tokio-tun = "0.7.0"
